# mp3Fromwav_Linux

./: buildSetup.sh
c/: CMakeLists.txt
c/cfg/: lameParameter.cfg
c/src/: .lameEngine.c.swp  lameEngine.c
cpp/: CMakeLists.txt
cpp/src/: .lameEngine.cpp.swp  lameEngine.cpp
